--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,17 +13,15 @@
   box-sizing: border-box;
 }
 body {
-  height: 100vh;
   background-position: center;
   background-image: url(../image/ff4d344d44981a5618deb925f0b8d381.gif);
   background-image: url(../image/cloudy.gif);
   background-image: url(../image/snow_end.gif);
-  background-image: url(../image/sunny_end.gif);
+  /* background-image: url(../image/sunny_end.gif); */
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 0 auto;
+  margin-top: 3rem;
   text-align: center;
-  padding-top: 2rem;
   color: white;
   display: flex;
   flex-direction: column;
@@ -31,8 +29,8 @@ body {
   justify-content: center;
 }
 body > div {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
   position: fixed;
   left: 0;
@@ -47,10 +45,6 @@ h1 {
 main {
   margin: 0 auto;
   width: 60%;
-}
-.input__wrapper h3 {
-  font-family: Jost-light;
-  font-size: 1rem;
 }
 input,
 button {
@@ -72,6 +66,9 @@ button {
   background-color: rgba(0, 0, 0, 0.3);
   padding: 2rem 2rem;
   border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .output__wrapper > h3 {
   margin-top: 1rem;
@@ -92,19 +89,17 @@ h5 {
 }
 
 .extraInfo {
-  margin: 1rem 2rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  gap: 10%;
   border-radius: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.5);
   background-color: rgba(0, 0, 0, 0.411);
-  padding-block: 2rem;
+  padding: 1rem 2rem;
 }
 
 .extraInfo p {
   font-size: 2rem;
-
   font-family: Jost-light;
   color: white;
 }
@@ -123,13 +118,10 @@ h5 {
 }
 
 .output__dataFollowingDays {
-  width: 80%;
-  margin-top: 4rem;
-  margin-inline: auto;
-  display: flex;
+  margin: 2rem auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
-  align-items: center;
-  justify-content: space-between;
 }
 .output__dataFollowingDays .outputTemp {
   font-size: 2rem;
@@ -142,16 +134,18 @@ h5 {
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
 }
+
+.output__dataFollowingDays .extraInfo p {
+  font-size: 1rem;
+}
 .output__dataFollowingDays .extraInfo p:nth-of-type(1) {
   border-right: 1px solid rgba(255, 255, 255, 0.5);
 }
 footer {
-  margin-top: 4rem;
+  margin-top: 1rem;
   font-family: Jost-light;
 }
-footer > p {
-  margin-top: 1rem;
-}
+
 footer > a {
   text-decoration: none;
   margin-inline: 2rem;
