--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,26 +29,17 @@ img {
                                 BODY
 =====================================================================*/
 body {
-  background-position: center;
-  background-image: url(../image/ff4d344d44981a5618deb925f0b8d381.gif);
-  background-image: url(../image/cloudy.gif);
-  background-image: url(../image/snow_end.gif);
-  /* background-image: url(../image/sunny_end.gif); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 3rem;
-  text-align: center;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  min-height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
-body > div {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-  position: fixed;
+body header {
+  overflow: hidden;
+}
+body header section {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
   z-index: -1;
@@ -65,6 +56,7 @@ body header article {
   right: -10%;
   z-index: -1;
   background-color: rgb(0, 0, 0);
+  transition: transform 200ms linear;
   gap: 1%;
 }
 body header article div {
@@ -91,18 +83,13 @@ body main {
 body main section {
   width: 80%;
   margin: 0 auto;
-  width: 60%;
 }
-input,
-button {
-  margin-block: 1rem;
-  font-family: Jost-light;
-  padding: 0.5rem 2rem;
-  border-radius: 2rem;
-  border: none;
-  margin-inline: 0.25rem;
+body main section:nth-of-type(1) {
+  border-radius: 1rem;
+  padding: 5%;
 }
-input {
+body main section:nth-of-type(1) input {
+  background-color: rgba(0, 0, 0, 0.747);
   width: 50%;
   height: 4rem;
   font-size: 1.7rem;
@@ -124,9 +111,7 @@ body main .output__wrapper {
   background-color: rgba(0, 0, 0, 0.7254901961);
   padding: 2%;
   border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: fit-content;
 }
 body main .output__wrapper .output__dataToday {
   display: flex;
@@ -156,63 +141,58 @@ body main .output__wrapper .output__dataToday div:nth-of-type(2) {
 body main .output__wrapper .output__dataToday div:nth-of-type(2) img {
   width: 7rem;
 }
-
-.extraInfo {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10%;
-  border-radius: 1rem;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  background-color: rgba(0, 0, 0, 0.411);
-  padding: 1rem 2rem;
+body main .output__wrapper .output__dataToday div:nth-of-type(2) p {
+  margin-top: 1%;
+  font-size: 3rem;
+  font-family: Jost-light;
+  transform: rotate(-90deg);
+  position: relative;
+  top: 30%;
+  left: 25%;
 }
-
-.extraInfo p {
-  font-size: 2rem;
+body main .output__wrapper .upcommingWrapper {
+  display: flex;
+  padding: 2% 4%;
+  background-color: rgba(0, 0, 0, 0.4823529412);
+  gap: 1.5rem;
+  border-radius: 1rem;
+}
+body main .output__wrapper .upcommingWrapper p {
   font-family: Jost-light;
   font-size: 8rem;
 }
 body main .output__wrapper .upcommingWrapper p:nth-of-type(1) {
   font-size: 4rem;
   font-family: Jost-light;
+}
+body main .output__wrapper .upcommingWrapper div {
   display: flex;
-  justify-content: center;
-  gap: 1rem;
   align-items: center;
-  /* margin-bottom: 1rem; */
 }
-
-.output__dataFollowingDays {
-  margin: 2rem auto;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1rem;
-}
-.output__dataFollowingDays .outputTemp {
-  font-size: 2rem;
-}
-.output__dataFollowingDays .extraInfo {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-content: space-between;
-  background-color: rgba(0, 0, 0, 0.422);
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-}
-
-.output__dataFollowingDays .extraInfo p {
-  font-size: 1rem;
-}
-.output__dataFollowingDays .extraInfo p:nth-of-type(1) {
+body main .output__wrapper .upcommingWrapper div div {
   border-right: 1px solid rgba(255, 255, 255, 0.5);
 }
-footer {
-  margin-top: 1rem;
-  font-family: Jost-light;
+body main .output__wrapper .upcommingWrapper div img {
+  width: 75px;
+  padding-right: 1rem;
+}
+body footer {
+  text-align: center;
+  color: #dde5fb;
+  margin-top: 20%;
 }
 
-footer > a {
-  text-decoration: none;
-  margin-inline: 2rem;
-  color: rgba(255, 255, 255, 0.67);
+@media screen and (max-width: 1150px) {
+  body header article {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    gap: 0.2%;
+  }
+  body header article div {
+    transform: rotate(0deg);
+  }
 }
+
+/*# sourceMappingURL=style.css.map */
